syntax = "proto3";

package proto;

option go_package = "state";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// ValidatorInfo represents the data regarding a validator that is verified by the metaNodes
message ValidatorInfo {
    bytes   PublicKey                       = 1  [(gogoproto.jsontag) = "publicKey"];
    uint32  ShardId                         = 2  [(gogoproto.jsontag) = "shardId"];
    string  List                            = 3  [(gogoproto.jsontag) = "list"];
    uint32  Index                           = 4  [(gogoproto.jsontag) = "index"];
    uint32  TempRating                      = 5  [(gogoproto.jsontag) = "tempRating"];
    uint32  Rating                          = 6  [(gogoproto.jsontag) = "rating"];
    float   RatingModifier                  = 7  [(gogoproto.jsontag) = "ratingModifier"];
    bytes   RewardAddress                   = 8  [(gogoproto.jsontag) = "rewardAddress,omitempty"];
    uint32  LeaderSuccess                   = 9  [(gogoproto.jsontag) = "leaderSuccess"];
    uint32  LeaderFailure                   = 10 [(gogoproto.jsontag) = "leaderFailure"];
    uint32  ValidatorSuccess                = 11 [(gogoproto.jsontag) = "validatorSuccess"];
    uint32  ValidatorFailure                = 12 [(gogoproto.jsontag) = "validatorFailure"];
    uint32  ValidatorIgnoredSignatures      = 13 [(gogoproto.jsontag) = "validatorIgnoredSignatures"];
    uint32  NumSelectedInSuccessBlocks      = 14 [(gogoproto.jsontag) = "numSelectedInSuccessBlocks"];
    bytes   AccumulatedFees                 = 15 [(gogoproto.jsontag) = "accumulatedFees,omitempty", (gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
    uint32  TotalLeaderSuccess              = 16 [(gogoproto.jsontag) = "totalLeaderSuccess"];
    uint32  TotalLeaderFailure              = 17 [(gogoproto.jsontag) = "totalLeaderFailure"];
    uint32  TotalValidatorSuccess           = 18 [(gogoproto.jsontag) = "totalValidatorSuccess"];
    uint32  TotalValidatorFailure           = 19 [(gogoproto.jsontag) = "totalValidatorFailure"];
    uint32  TotalValidatorIgnoredSignatures = 20 [(gogoproto.jsontag) = "totalValidatorIgnoredSignatures"];
}

// ShardValidatorInfo represents the data regarding a validator that is stored in the PeerMiniblocks
message ShardValidatorInfo {
    bytes   PublicKey   = 1 [(gogoproto.jsontag) = "publicKey"];
    uint32  ShardId     = 2 [(gogoproto.jsontag) = "shardId"];
    string  List        = 3 [(gogoproto.jsontag) = "list,omitempty"];
    uint32  Index       = 4 [(gogoproto.jsontag) = "index"];
    uint32  TempRating  = 5 [(gogoproto.jsontag) = "tempRating"];
}
